--- a/food.html
+++ b/food.html
@@ -17,16 +17,35 @@
 
 <body>
   <!--首屏-->
-  <div class="topBox foodeTop">
+  <div class="topBox foodTop">
     <header>
       <a href="index.html"><img src="img/logo.png" alt="蓝派别墅轰趴馆" class="logo"></a>
-      <nav>
+      <!--默认菜单-->
+      <nav class="defaultView">
         <a href="index.html">首页</a>
         <a href="place.html">所有场地</a>
         <a href="food.html" class="active">餐饮</a>
         <a href="photo.html">照片墙</a>
         <span>400-8008-8008</span>
       </nav>
+      <!--响应式菜单-->
+      <div class="responsiveNav" id="responsiveNav">
+        <span class="line-1"></span>
+        <span class="line-2"></span>
+        <span class="line-3"></span>
+      </div>
+      <div class="responsiveNav-list">
+        <ul>
+          <li><a href="index.html">首页</a></li>
+          <li><a href="place.html">所有场地</a></li>
+          <li><a href="food.html" class="active">餐饮</a></li>
+          <li><a href="photo.html">照片墙</a></li>
+          <li><a href="about.html">关于我们</a></li>
+          <li>400-8008-8008</li>
+          <li><img src="img/wechat.jpg" alt="客服二维码"></li>
+          <li>微信客服：lanpaish</li>
+        </ul>
+      </div>
     </header>
     <aside class="slogan">
       <img src="img/place-header-slogan.png" class="sloganPic" alt="123">
@@ -34,155 +53,38 @@
       <div class="strip"></div>
     </aside>
     <article class="daily">
-      <img src="img/daily-slogan.png" alt="123" class="daily-slogan">
-      <div class="dailyPic">
-        <ul id="dailySlidePic">
-          <li><img src="img/daily-img-1.jpg" alt="123"></li>
-          <li><img src="img/daily-img-2.jpg" alt="123"></li>
-          <li><img src="img/daily-img-3.jpg" alt="123"></li>
-        </ul>
-        <div class="daily-slideBtn">
-          <span class="daily-slideBtn-style prev"></span>
-          <span class="daily-slideBtn-style next"></span>
+      <div class="daily-left">
+        <img src="img/daily-slogan.png" alt="123" class="daily-slogan">
+        <div class="dailyPic">
+          <ul id="dailySlidePic">
+            <li><img src="img/daily-img-1.jpg" alt="123"></li>
+            <li><img src="img/daily-img-2.jpg" alt="123"></li>
+            <li><img src="img/daily-img-3.jpg" alt="123"></li>
+          </ul>
+          <div class="dailySlidePic-info detailBtnTouch">
+            夏威夷别墅轰趴馆
+          </div>
+          <div class="daily-slideBtn">
+            <span class="daily-slideBtn-style prev"></span>
+            <span class="daily-slideBtn-style next"></span>
+          </div>
         </div>
+        <div class="daily-bg"></div>
       </div>
-      <div class="daily-bg"></div>
-      <h1>夏威夷<br>别墅轰趴馆</h1>
-      <div class="dailyStrip"></div>
-      <p class="dailyContent introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-      <div class="detailBtn dailyDetailBtn">VIEW</div>
+      <div class="daily-right">
+        <h1>夏威夷<br>别墅轰趴馆</h1>
+        <div class="dailyStrip"></div>
+        <p class="dailyContent introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
+        <div class="detailBtn dailyDetailBtn">VIEW</div>
+      </div>
     </article>
     <div class="scrolldown">滑动更多内容</div>
   </div>
   <!--主要内容-->
-  <div class="container">
+  <div class="container" id="placeList">
     <!--分类-->
-    <section class="typeList clearfix">
-      <div class="typeList-title flyLeftAnimate">
-        <h2>异域风情</h2>
-        <span><i></i><i></i><i></i></span>
-      </div>
-      <div class="colList clearfix flyRightAnimate">
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-      </div>
-      <div class="colList clearfix flyRightAnimate">
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-      </div>
-    </section>
-    <!--分类-->
-    <section class="typeList clearfix">
-      <div class="typeList-title flyLeftAnimate">
-        <h2>异域风情</h2>
-        <span><i></i><i></i><i></i></span>
-      </div>
-      <div class="colList clearfix flyRightAnimate">
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-      </div>
-      <div class="colList clearfix flyRightAnimate">
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-        <div class="product left">
-          <div class="productPic">
-            <img src="img/place-list/place-list-1.jpg" alt="123">
-          </div>
-          <div class="product-content-bg">
-            <div class="product-content">
-              <h3>夏威夷别墅轰趴馆</h3>
-              <p class="introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-              <span class="productStrip"></span>
-            </div>
-          </div>
-          <div class="detailBtn productBtn">VIEW</div>
-        </div>
-      </div>
-    </section>
-    <div class="seeMore">查看更多</div>
+        
+    <!--<div class="seeMore">查看更多</div>-->
   </div>
   <!--弹出详情-->
   <div class="detailCover">
@@ -247,7 +149,7 @@
     <li class="backtop"><a href="#top">TOP</a></li>
   </ul>
   <div class="erweima">
-    <img src="img/wechat.png" alt="123">
+    <img src="img/wechat.jpg" alt="123">
   </div>
 
   <script src="js/jquery-2.0.0.min.js"></script>
