--- a/place.html
+++ b/place.html
@@ -53,28 +53,37 @@
       <div class="strip"></div>
     </aside>
     <article class="daily">
-      <img src="img/daily-slogan.png" alt="123" class="daily-slogan">
-      <div class="dailyPic">
-        <ul id="dailySlidePic">
-          <li><img src="img/daily-img-1.jpg" alt="123"></li>
-          <li><img src="img/daily-img-2.jpg" alt="123"></li>
-          <li><img src="img/daily-img-3.jpg" alt="123"></li>
-        </ul>
-        <div class="daily-slideBtn">
-          <span class="daily-slideBtn-style prev"></span>
-          <span class="daily-slideBtn-style next"></span>
+      <div class="daily-left">
+        <img src="img/daily-slogan.png" alt="123" class="daily-slogan">
+        <div class="dailyPic">
+          <ul id="dailySlidePic">
+            <li><img src="img/daily-img-1.jpg" alt="123"></li>
+            <li><img src="img/daily-img-2.jpg" alt="123"></li>
+            <li><img src="img/daily-img-3.jpg" alt="123"></li>
+          </ul>
+          <div class="dailySlidePic-info detailBtnTouch">
+            夏威夷别墅轰趴馆
+          </div>
+          <div class="daily-slideBtn">
+            <span class="daily-slideBtn-style prev"></span>
+            <span class="daily-slideBtn-style next"></span>
+          </div>
         </div>
+        <div class="daily-bg"></div>
       </div>
-      <div class="daily-bg"></div>
-      <h1>夏威夷<br>别墅轰趴馆</h1>
-      <div class="dailyStrip"></div>
-      <p class="dailyContent introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
-      <div class="detailBtn dailyDetailBtn">VIEW</div>
+      <div class="daily-right">
+        <h1>夏威夷<br>别墅轰趴馆</h1>
+        <div class="dailyStrip"></div>
+        <p class="dailyContent introduce">本别墅适合做：Team Building、私人派对、同学聚会、开学/毕业聚会、好友聚会、公司聚会、草坪婚礼、公司尾牙、草坪酒会、行业交流、高端派对、商务宴请、（微）电影拍摄、节日派对、主题派对、动漫Cosplay、求婚求爱、会议会晤、社团活动、旅游度假、音乐酒会、拓展/破冰游戏等。</p>
+        <div class="detailBtn dailyDetailBtn">VIEW</div>
+      </div>
     </article>
     <div class="scrolldown">滑动更多内容</div>
   </div>
   <!--主要内容-->
   <div class="container" id="placeList">
+    <!--分类-->
+        
     <!--<div class="seeMore">查看更多</div>-->
   </div>
   <!--弹出详情-->
