--- a/photo.html
+++ b/photo.html
@@ -25,7 +25,7 @@
       </li>
     </ul>
     <div class="photoList">
-      <ul>
+      <ul class="clearfix">
         <li class="viewPhotos">
           <img src="img/daily-img-1.jpg" alt="">
           <i class="topLine"></i>
@@ -117,7 +117,7 @@
     <li class="wechat" name="扫码关注我们">扫码</br>关注</br>我们</li>
   </ul>
   <div class="erweima">
-    <img src="img/wechat.png" alt="123">
+    <img src="img/wechat.jpg" alt="123">
   </div>
   <!--弹出层-->
   <div class="detailCover">
