--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
             <h3>关于我们</h3>
             <div class="line"></div>
             <p>【蓝派】是沪上唯一一家专注于做【高端】私人别墅派对与专业企业客户服务的【顶级别墅资产管理品牌】。【蓝派豪华团队】由美国华侨、英国硕士、法国米其林三星级名厨、国内五星级行政主厨、部分本科学历管家等高等引进人才组成，严格拒绝兼职服务。【蓝派】专注于提供价值5000万至上亿的【顶级花园独栋别墅】，实现您真正的【别墅贵族体验】！</p>
-            <p><strong>我们的服务理念： </strong></br>【 The Best or Nothing ！ 】</br> 一直被模仿，从未被超越！</p>
+            <p class="s2"><strong>我们的服务理念： </strong></br>【 The Best or Nothing ！ 】</br> 一直被模仿，从未被超越！</p>
           </div>
         </article>
       </div>
@@ -109,8 +109,6 @@
         <li><img src="img/friends/3.jpg" alt="Our Friends"></li>
         <li><img src="img/friends/4.jpg" alt="Our Friends"></li>
         <li><img src="img/friends/5.jpg" alt="Our Friends"></li>
-      </ul>
-      <ul class="clearfix flyRightAnimate">
         <li><img src="img/friends/10.jpg" alt="Our Friends"></li>
         <li><img src="img/friends/9.jpg" alt="Our Friends"></li>
         <li><img src="img/friends/8.jpg" alt="Our Friends"></li>
