--- a/food.html
+++ b/food.html
@@ -81,7 +81,7 @@
     <div class="scrolldown">滑动更多内容</div>
   </div>
   <!--主要内容-->
-  <div class="container" id="placeList">
+  <div class="container" id="foodList">
     <!--分类-->
         
     <!--<div class="seeMore">查看更多</div>-->
