--- a/place.html
+++ b/place.html
@@ -15,7 +15,7 @@
   <![endif]-->
 </head>
 
-<body>
+<body id="placeAll">
   <!--首屏-->
   <div class="topBox placeTop">
     <header>
@@ -52,7 +52,7 @@
       <p class="slogan-nr">别墅轰趴馆</p>
       <div class="strip"></div>
     </aside>
-    <article class="daily">
+    <article class="daily" id="placeDaily">
       <div class="daily-left">
         <img src="img/daily-slogan.png" alt="123" class="daily-slogan">
         <div class="dailyPic">
@@ -83,7 +83,6 @@
   <!--主要内容-->
   <div class="container" id="placeList">
     <!--分类-->
-        
     <!--<div class="seeMore">查看更多</div>-->
   </div>
   <!--弹出详情-->
