--- a/test.html
+++ b/test.html
@@ -71,6 +71,47 @@
       </div>
     </div>
   </section>
+
+  <!--品项弹出详情-->
+  <div class="detailCover">
+    <section class="detailContent">
+      <div class="comWidth" id="itemDetail">
+        <!--<h2>夏威夷别墅轰趴馆<span class="closeBtn closeBtnAnimate" id="closeBtn"><i></i><i></i></span></h2>
+        <div class="detailPic picSlideBox clearfix">
+          <ul class="picSlideBig">
+            <li><img src="img/details/place-details-1.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-2.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-3.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-4.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-5.jpg" alt="123"></li>
+            <li><img src="img/details/place-details-6.jpg" alt="123"></li>
+          </ul>
+          <div class="picSlideSmallBox"><span class="curNum"></span>/<span class="totalNum"></span></div>
+          <span class="picSlideBtn prev" id="picSlideBtnPrev"></span>
+          <span class="picSlideBtn next" id="picSlideBtnNext"></span>
+        </div>
+        <div class="detailInfo">
+          <h3>详细信息</h3>
+          <ul class="detailInfoText">
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
+            <li class="clearfix">
+              <span>场地功能</span>
+              <i>
+                <ul>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                  <li>Lorem ipsum dolor sit amet, consectetur</li>
+                </ul>
+              </i>
+            </li>
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
+            <li class="clearfix"><span>场地功能</span><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque, cupiditate, distinctio. Praesentium asperiores quos vero hic facilis blanditiis explicabo! Quam excepturi, impedit doloremque, quo nisi ea aspernatur et at commodi!</i></li>
+          </ul>
+        </div>-->
+      </div>
+    </section>
+  </div>
 </body>
 
 </html>
